# jobfit

./: .gitignore  LICENSE  README.md  app.py  development_plan.md  fallback_report.py  jd_parser.py  langchain.md  llm_utils.py  matcher.py  prompts.py  pyproject.toml  resume_parser.py
chains/: gap_analysis_chain.py  jd_analysis_chain.py  resume_analysis_chain.py
docs/: troubleshooting.md
tests/: test_chains.py  test_fallback_report.py  test_jd_parser.py  test_matcher.py
