[project]
name = "jobfit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "openai>=2.44.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "streamlit>=1.58.0",
]
